--- a/app/src/main/res/layout/carta.xml
+++ b/app/src/main/res/layout/carta.xml
@@ -274,8 +274,8 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/contenedorPlatos"
-        android:layout_width="319dp"
-        android:layout_height="476dp"
+        android:layout_width="317dp"
+        android:layout_height="419dp"
         android:layout_marginStart="33dp"
         android:layout_marginTop="321dp"
         android:layout_marginEnd="32dp"
@@ -286,6 +286,28 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.055" />
+
+    <Button
+        android:id="@+id/botonVerCuenta"
+        android:layout_width="173dp"
+        android:layout_height="58dp"
+        android:layout_marginStart="106dp"
+        android:layout_marginTop="761dp"
+        android:layout_marginEnd="114dp"
+        android:layout_marginBottom="32dp"
+        android:backgroundTint="#FD8663"
+        android:fontFamily="@font/poppins"
+        android:onClick="botonVerCuenta"
+        android:text="Ver cuenta"
+        android:textSize="20sp"
+        android:visibility="invisible"
+        app:cornerRadius="10dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:strokeColor="#EF6035"
+        app:strokeWidth="1dp" />
 
     <FrameLayout
         android:id="@+id/circuloNumeroCarrito"
@@ -344,7 +366,6 @@
                 android:layout_marginBottom="13dp"
                 android:backgroundTint="#FD8663"
                 android:fontFamily="@font/poppins"
-                android:onClick="botonSiguiente"
                 android:shadowColor="#0B0A0A"
                 android:text="Añadir"
                 android:textSize="23sp"
