ApiService.java -> @DELETE("comandas") Carrito.java -> Alerta confirmación pedido carrito.xml -> Alerta confirmación pedido Cuenta.java -> Alerta confirmación pago + despedida ver_cuenta.xml -> Alerta confirmación pago mesa1ocupada.png, mesa2ocupada.png, mesa3ocupada.png, mesa4ocupada.png, mesa5ocupada.png -> Añadidos SeleccionMesa.java -> Alerta mesa ocupada, imagen mesa ocupada

--- a/app/src/main/res/layout/carrito.xml
+++ b/app/src/main/res/layout/carrito.xml
@@ -40,7 +40,7 @@
         android:layout_marginBottom="81dp"
         android:backgroundTint="#FD8663"
         android:fontFamily="@font/poppins"
-        android:onClick="botonPedirCarrito"
+        android:onClick="alertaConfirmarPedido"
         android:shadowColor="#0B0A0A"
         android:shadowDx="0"
         android:shadowDy="0"
