--- a/app/src/main/res/layout/ver_cuenta.xml
+++ b/app/src/main/res/layout/ver_cuenta.xml
@@ -18,7 +18,7 @@
         android:layout_marginBottom="81dp"
         android:backgroundTint="#FD8663"
         android:fontFamily="@font/poppins"
-        android:onClick="botonPedirCarrito"
+        android:onClick="alertaConfirmarCuenta"
         android:shadowColor="#0B0A0A"
         android:shadowDx="0"
         android:shadowDy="0"
